# Site

./: .gitignore  README.md  style.css.old  utils.js
Atas/: index.html  script.js  style.css
Azul/: index.html  manifest.cfg
Azul/css/: style.css
Azul/javascript/: atas2026.js  buscaratas.js  pautareuniao.js
Indicações/: index.html  script.js  style.css
Interlegis/css/: style.css
Interlegis/javascript/: buscaratas.js  pautareuniao.js  pesquisarmaterias.js  utils.js
Matérias/: index.html  script.js  style.css
Respostas/: index.html  script.js  style.css
Sessões/: script.js  ultimasessao.html
backend/.cache_sapl/: cache.db
backend/app/: main.py  pesquisarmaterias.js  pyproject.toml  requeriments.txt
backend/app/.cache_sapl/: cache.db  cache.db-shm  cache.db-wal
backend/app/api/: atas.py  pautas.py  projetos.py
backend/app/core/: limiter.py
backend/app/services/: atasService.py  pautaService.py  projetosService.py
cmtapira/css/: style.css
cmtapira/javascript/: pesquisarmaterias.js
cmtapira/page-templates/: atas.html  materias.html
frontend/cmtapira/: index.html  manifest.cfg  rules.xml
frontend/cmtapira/css/: style.css
frontend/cmtapira/galleria-theme/: galleria.tema-pm3.css  galleria.tema-pm3.js
frontend/cmtapira/javascript/: buscaratas.js  function.js  pautareuniao.html  pesquisarlicitacoes.js  pesquisarmaterias.js  respostas.js  ultimasessao.js  utils.js
frontend/cmtapira/page-templates/: atas.html  materias.html  pautareuniao.html  pesquisaPNTP.html  pesquisarlicitacoes.html  pesquisarmaterias.html  respostas.html  (+1 more)
