[project]
name = "pesquisasapl"
version = "0.1.0"
description = "Backend para integração de pesquisas no SAPL"
authors = [
    {name = "gustavokrm",email = "gustavokrm@gmail.com"}
]
license = "GPL 3.0"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.47.0,<0.49.0)",
    "requests (==2.34.2)",
    "slowapi (==0.1.9)",
    "middleware (>=1.2.3,<2.0.0)",
    "limiter (>=0.5.0,<0.6.0)",
    "datetime (>=6.0,<7.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
